fix: Fixed merge conflicts and removed redundancy from Updater class and Drifty's update related functions